# marapendi

./: .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS.md  LICENCE.md  README.md  marapendi logo.pptx  pyproject.toml
ci/: Dockerfile  conda_env.yml
data/: test_ui_curve.csv
docs/: Makefile  architecture.rst  conf.py  index.rst  installation.rst  requirements.txt  sg_execution_times.rst
examples/: 01_cell_assembly_and_polarization_curve.ipynb  02_quasi_steady_simulation_monocell.ipynb  03_implicit_vs_explicit_comparison.ipynb  04_transient_vs_quasi_steady.ipynb  05_multi_condition_comparison.ipynb  06_picewise_linear_approximation_water_conent.ipynb  07_parameter_estimation.ipynb  GALLERY_HEADER.rst  plot_01_polarization_curve.py  plot_02_quasi_steady.py  plot_03_implicit_vs_explicit.py  plot_04_transient.py  plot_05_multi_condition.py  plot_06_parameter_estimation.py  plot_07_pwl_membrane.py  plot_08_water_balance.py  plot_09_membrane_correlations.py
notebooks/: 01_cell_assembly_and_polarization_curve.ipynb  01_polarization_curve.ipynb  02_custom_h2_permeation_model.ipynb  02_parameter_estimation.ipynb  03_quasi_steady_simulation_monocell.ipynb  04_implicit_vs_explicit_comparison.ipynb  05_transient_vs_quasi_steady.ipynb  07_picewise_linear_approximation_water_conent.ipynb  estimate_data_garsany2018 copy.ipynb  estimate_data_gass2024.ipynb  estimate_data_tricker2023.ipynb  parameter_estimation_Affonso_Nobrega_et_al_2026_JES.ipynb  parameter_estimation_Affonso_Nobrega_et_al_2026_JES_sober.ipynb  parameter_estimation_legacy.ipynb  plot_resuts_pwl_membrane.ipynb  (+8 more)
(+600 files in other folders)
